--- a/Recorder/app/src/main/res/layout/node.xml
+++ b/Recorder/app/src/main/res/layout/node.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
+    android:background="@color/background_material_dark"
     >
 
     <TextView android:id="@+id/title"
@@ -9,13 +10,14 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:layout_weight="1"
-
+        android:textColor="@color/button_material_light"
         />
 
-     <Button android:id="@+id/remove"
+     <ImageButton android:id="@+id/remove"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="right"
-         android:text="X"/>
+         android:src="@android:drawable/ic_menu_delete"
+         />
 
  </LinearLayout>
